# mtrxtests

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
include/: mtrx.h
src/: mtrx.cpp
tests/: CMakeLists.txt
tests/fx/: 1+2.txt  1_2.txt  2.txt
tests/src/: main.cpp
